--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,10 @@ services:
     
 volumes:
   mongodb:
-    external: true
+  driver: local
     
 networks:
   springappnetwork:
-    external: true
+  driver: bridge
+
+    
