--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - mongo
     networks:
-    - springappnetwork  
+    - customeoverlay  
     
 
   mongo:
@@ -26,7 +26,7 @@ services:
       - mongodb:/data/db
     restart: always
     networks:
-    - springappnetwork
+    - customeoverlay
     
 volumes:
   mongodb:
